# minijax

./: .gitignore  LICENSE  README.md  autodidax2.md  minijax.cabal
minijax-hs/: README.md  minijax.cabal
minijax-hs/src/: MiniJax.hs
minijax-hs/src/MiniJax/: Common.hs  Direct.hs  Tagless.hs
minijax-hs/src/MiniJax/Tagless/: Eval.hs  Stage.hs
minijax-hs/src/MiniJax/Tagless/JVP/: Dynamic.hs  TaggedDynamic.hs  TaggedStatic.hs
minijax-hs/test/: DirectSpec.hs  TaglessSpec.hs
minijax-ml/: README.md  dune  dune-project  minijax-ml.opam  minijax.ml  minijax_api.ml  minijax_gadt.ml  minijax_global.ml  minijax_reader.ml  minijax_tagged.ml  test.ml  test_gadt.ml  test_global.ml  test_reader_monad.ml  test_reader_style.ml  test_tagged.ml
minijax-py/: minijax.py  test_minijax.py
minijax-rs/: Cargo.toml  README.md
minijax-rs/src/: lib.rs
minijax-ts/: package.json
minijax-ts/src/: index.ts  minijax.ts  test.ts
src/: MiniJax.hs
src/MiniJax/: Common.hs  Tagless.hs
src/MiniJax/Tagless/: Eval.hs  JVP.hs  Stage.hs
src/MiniJax/Tagless/JVP/: Dynamic.hs  Static.hs  TaggedDynamic.hs  TaggedStatic.hs
test/: BasicTypesSpec.hs  ContextSpec.hs  EvalSpec.hs  InterpreterSpec.hs  Spec.hs  TaglessSpec.hs
